# fuxion

./: .gitignore  LICENSE  README.md  address.template  name.template  norm.py  pyproject.toml
datasets/: names-100.json
datasynth/: __init__.py  base.py  dataset.py  few_shot.py  generators.py  models.py  normalizers.py  pipelines.py  predict.py  run.py  train.py
datasynth/datasets/: addresses.json  nametest.json  pricetest.json  sample-address.json
datasynth/examples/name_generator/: few_shot.json  name_generator.py  name_normalizer.py  name_pipeline.py
datasynth/finetuning/: dataset.py
examples/: address.json  price.json
few_shot_examples/: irp.json
finetuning/: predict.py  train.py
fuxion/: base.py  dynamic_models.py  few_shot.py  generators.py  models.py  normalizers.py  pipelines.py  settings.py
fuxion/examples/name_generator/: generator.template  name_generator.py  name_normalizer.py  name_pipeline.py
templates/: name.generator.template
templates/generator/: address.template  name.template  price.template
templates/normalizer/: address.template  name.template  price.template
terminalizer_config/: config.yml  generator.yml  normalizer.yml  pipeline.yml
tests/: test_pipeline.py
