[tool.poetry]
name = "datasynth"
version = "0.1.0"
description = "Synthetic dataset generation functions powered by GPT-3"
authors = ["Madison May <madison@indico.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^0.26.4"
Jinja2 = "^3.1.2"
langchain = "^0.0.77"
typer = "^0.7.0"
install = "^1.3.5"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
