[tool.poetry]
name = "datasynth"
version = "0.1.0"
description = "Synthetic dataset generation functions powered by GPT-3"
authors = ["Oluwatobi Adefami <tobiadefami@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^1.0.0"
Jinja2 = "^3.1.2"
langchain = "^0.1.4"
typer = "^0.9.0"
install = "^1.3.5"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
transformers = "^4.26.1"
pytest = "^7.2.2"
langchain-openai = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
