[tool.poetry]
name ="fuxion"
version = "0.0.1"
description = "Synthetic dataset generation and normalization functions powered by LLMs"
authors = ["Oluwatobi Adefami <tobiadefami@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^1.0.0"
Jinja2 = "^3.1.2"
langchain = "^0.1.4"
typer = "^0.9.0"
install = "^1.3.5"
pytest = "^7.2.2"
langchain-openai = "^0.0.5"
ollama = "^0.1.8"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
